# agent-toga

./: .gitignore  CHANGELOG.md  COMPLETE_SUMMARY.md  CONTRIBUTING.md  Dockerfile  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_ANALYSIS.md  MANIFEST.in  Makefile  OPTIMIZATION_SUMMARY.md  PROGRESS_REPORT.md  QUICKSTART.md  README.md  docker-compose.yml  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/agents/: agent-toga.md
agent-zero-hck/: ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  README.md  deploy.sh  docker-compose.yml  requirements.txt
agent-zero-hck/agents/toga_hck/: __init__.py  agent.py
agent-zero-hck/config/: agent_toga_hck.yaml
agent-zero-hck/prompts/: toga_hck_system.md
agent-zero-hck/python/helpers/: toga_personality.py  toga_security.py
config/: agent_toga.yaml
dashboard/: .gitignore  ideas.md  package.json
dashboard/client/: index.html
dashboard/client/src/: index.css
dashboard/client/src/components/: DataStream.tsx  GlitchText.tsx  PersonalityRadar.tsx  StatusCard.tsx  TechTree.tsx
dashboard/client/src/pages/: Home.tsx
docs/: INTEGRATION_GUIDE.md  SECURITY_TESTING.md  TOGA_PERSONALITY.md  TRANSFORM_QUIRK.md
examples/: benchmark.py  demo_toga.py  security_testing_examples.py  test_toga.py  transform_examples.py  usage_examples.py
python/: __init__.py
python/helpers/: __init__.py  toga_avatar_3d.py  toga_avatar_live2d.py  toga_personality.py  toga_security.py  toga_transform.py
tests/: test_avatar_integration.py
webui/: README.md  app.py  requirements.txt
webui/static/: 3d_renderer.html  live2d_renderer.html
